kos/kernel/ipc/ipc_wrapper.py

#!/usr/bin/env python3
"""
KOS IPC Python Bindings
Comprehensive Inter-Process Communication wrapper for KOS kernel IPC functionality
Supports pipes, shared memory, message queues, semaphores, mutexes, condition variables, and signals
"""

import ctypes
import ctypes.util
import os
import sys
import threading
import time
from typing import Optional, Any, Tuple, List
from enum import IntEnum
import signal as py_signal

# Find and load the IPC library
def _find_ipc_library():
    """Find the KOS IPC library"""
    possible_paths = [
        "./libkos_ipc.so",
        "/usr/local/lib/libkos_ipc.so",
        "/usr/lib/libkos_ipc.so",
        os.path.join(os.path.dirname(__file__), "libkos_ipc.so")
    ]
    
    for path in possible_paths:
        if os.path.exists(path):
            return path
    
    # Try to find using ctypes.util
    lib_path = ctypes.util.find_library("kos_ipc")
    if lib_path:
        return lib_path
    
    raise ImportError("Could not find libkos_ipc.so library")

# Constants
class IPCError(IntEnum):
    SUCCESS = 0
    ERROR = -1
    TIMEOUT = -2
    INVALID_PARAM = -3
    RESOURCE_BUSY = -4
    NO_MEMORY = -5

class IPCException(Exception):
    """Base exception for IPC operations"""
    pass

class IPCTimeoutException(IPCException):
    """Timeout exception for IPC operations"""
    pass

class IPCResourceBusyException(IPCException):
    """Resource busy exception for IPC operations"""
    pass

# Load library
try:
    _lib_path = _find_ipc_library()
    _lib = ctypes.CDLL(_lib_path)
except ImportError:
    # For development/testing when library isn't built yet
    _lib = None
    print("Warning: KOS IPC library not found, using mock implementation")

# Structure definitions
class PipeStruct(ctypes.Structure):
    _fields_ = [
        ("read_fd", ctypes.c_int),
        ("write_fd", ctypes.c_int),
        ("name", ctypes.c_char * 256),
        ("is_named", ctypes.c_int),
        ("buffer_size", ctypes.c_size_t),
        ("mutex", ctypes.c_void_p)  # pthread_mutex_t placeholder
    ]

class ShmStruct(ctypes.Structure):
    _fields_ = [
        ("shm_id", ctypes.c_int),
        ("key", ctypes.c_int),
        ("addr", ctypes.c_void_p),
        ("size", ctypes.c_size_t),
        ("flags", ctypes.c_int),
        ("mutex", ctypes.c_void_p),
        ("name", ctypes.c_char * 256)
    ]

class MsgQueueStruct(ctypes.Structure):
    _fields_ = [
        ("msqid", ctypes.c_int),
        ("key", ctypes.c_int),
        ("posix_mq", ctypes.c_int),
        ("name", ctypes.c_char * 256),
        ("is_posix", ctypes.c_int),
        ("attr", ctypes.c_void_p)  # mq_attr placeholder
    ]

class SemaphoreStruct(ctypes.Structure):
    _fields_ = [
        ("semid", ctypes.c_int),
        ("key", ctypes.c_int),
        ("posix_sem", ctypes.c_void_p),
        ("name", ctypes.c_char * 256),
        ("is_posix", ctypes.c_int),
        ("value", ctypes.c_int),
        ("max_value", ctypes.c_int)
    ]

class MutexStruct(ctypes.Structure):
    _fields_ = [
        ("mutex", ctypes.c_void_p),  # pthread_mutex_t placeholder
        ("attr", ctypes.c_void_p),   # pthread_mutexattr_t placeholder
        ("initialized", ctypes.c_int),
        ("owner", ctypes.c_int)
    ]

class CondVarStruct(ctypes.Structure):
    _fields_ = [
        ("cond", ctypes.c_void_p),   # pthread_cond_t placeholder
        ("attr", ctypes.c_void_p),   # pthread_condattr_t placeholder
        ("initialized", ctypes.c_int)
    ]

# Function prototypes setup
def _setup_function_prototypes():
    """Setup C function prototypes"""
    if not _lib:
        return
    
    # Pipe functions
    _lib.kos_pipe_create.argtypes = [ctypes.POINTER(PipeStruct)]
    _lib.kos_pipe_create.restype = ctypes.c_int
    
    _lib.kos_pipe_create_named.argtypes = [ctypes.POINTER(PipeStruct), ctypes.c_char_p]
    _lib.kos_pipe_create_named.restype = ctypes.c_int
    
    _lib.kos_pipe_read.argtypes = [ctypes.POINTER(PipeStruct), ctypes.c_void_p, ctypes.c_size_t]
    _lib.kos_pipe_read.restype = ctypes.c_int
    
    _lib.kos_pipe_write.argtypes = [ctypes.POINTER(PipeStruct), ctypes.c_void_p, ctypes.c_size_t]
    _lib.kos_pipe_write.restype = ctypes.c_int
    
    _lib.kos_pipe_destroy.argtypes = [ctypes.POINTER(PipeStruct)]
    _lib.kos_pipe_destroy.restype = ctypes.c_int
    
    # Shared memory functions
    _lib.kos_shm_create.argtypes = [ctypes.POINTER(ShmStruct), ctypes.c_char_p, ctypes.c_size_t, ctypes.c_int]
    _lib.kos_shm_create.restype = ctypes.c_int
    
    _lib.kos_shm_attach.argtypes = [ctypes.POINTER(ShmStruct), ctypes.c_char_p]
    _lib.kos_shm_attach.restype = ctypes.c_int
    
    _lib.kos_shm_detach.argtypes = [ctypes.POINTER(ShmStruct)]
    _lib.kos_shm_detach.restype = ctypes.c_int
    
    _lib.kos_shm_destroy.argtypes = [ctypes.POINTER(ShmStruct)]
    _lib.kos_shm_destroy.restype = ctypes.c_int
    
    _lib.kos_shm_get_addr.argtypes = [ctypes.POINTER(ShmStruct)]
    _lib.kos_shm_get_addr.restype = ctypes.c_void_p
    
    _lib.kos_shm_lock.argtypes = [ctypes.POINTER(ShmStruct)]
    _lib.kos_shm_lock.restype = ctypes.c_int
    
    _lib.kos_shm_unlock.argtypes = [ctypes.POINTER(ShmStruct)]
    _lib.kos_shm_unlock.restype = ctypes.c_int
    
    # Message queue functions
    _lib.kos_msgqueue_create.argtypes = [ctypes.POINTER(MsgQueueStruct), ctypes.c_char_p, ctypes.c_int]
    _lib.kos_msgqueue_create.restype = ctypes.c_int
    
    _lib.kos_msgqueue_send.argtypes = [ctypes.POINTER(MsgQueueStruct), ctypes.c_void_p, ctypes.c_size_t, ctypes.c_int]
    _lib.kos_msgqueue_send.restype = ctypes.c_int
    
    _lib.kos_msgqueue_receive.argtypes = [ctypes.POINTER(MsgQueueStruct), ctypes.c_void_p, ctypes.c_size_t, ctypes.POINTER(ctypes.c_int)]
    _lib.kos_msgqueue_receive.restype = ctypes.c_int
    
    _lib.kos_msgqueue_destroy.argtypes = [ctypes.POINTER(MsgQueueStruct)]
    _lib.kos_msgqueue_destroy.restype = ctypes.c_int
    
    # Semaphore functions
    _lib.kos_semaphore_create.argtypes = [ctypes.POINTER(SemaphoreStruct), ctypes.c_char_p, ctypes.c_int, ctypes.c_int]
    _lib.kos_semaphore_create.restype = ctypes.c_int
    
    _lib.kos_semaphore_wait.argtypes = [ctypes.POINTER(SemaphoreStruct), ctypes.c_int]
    _lib.kos_semaphore_wait.restype = ctypes.c_int
    
    _lib.kos_semaphore_post.argtypes = [ctypes.POINTER(SemaphoreStruct)]
    _lib.kos_semaphore_post.restype = ctypes.c_int
    
    _lib.kos_semaphore_get_value.argtypes = [ctypes.POINTER(SemaphoreStruct)]
    _lib.kos_semaphore_get_value.restype = ctypes.c_int
    
    _lib.kos_semaphore_destroy.argtypes = [ctypes.POINTER(SemaphoreStruct)]
    _lib.kos_semaphore_destroy.restype = ctypes.c_int
    
    # Mutex functions
    _lib.kos_mutex_init.argtypes = [ctypes.POINTER(MutexStruct), ctypes.c_int]
    _lib.kos_mutex_init.restype = ctypes.c_int
    
    _lib.kos_mutex_lock.argtypes = [ctypes.POINTER(MutexStruct)]
    _lib.kos_mutex_lock.restype = ctypes.c_int
    
    _lib.kos_mutex_try_lock.argtypes = [ctypes.POINTER(MutexStruct)]
    _lib.kos_mutex_try_lock.restype = ctypes.c_int
    
    _lib.kos_mutex_unlock.argtypes = [ctypes.POINTER(MutexStruct)]
    _lib.kos_mutex_unlock.restype = ctypes.c_int
    
    _lib.kos_mutex_destroy.argtypes = [ctypes.POINTER(MutexStruct)]
    _lib.kos_mutex_destroy.restype = ctypes.c_int
    
    # Condition variable functions
    _lib.kos_condvar_init.argtypes = [ctypes.POINTER(CondVarStruct), ctypes.c_int]
    _lib.kos_condvar_init.restype = ctypes.c_int
    
    _lib.kos_condvar_wait.argtypes = [ctypes.POINTER(CondVarStruct), ctypes.POINTER(MutexStruct)]
    _lib.kos_condvar_wait.restype = ctypes.c_int
    
    _lib.kos_condvar_timed_wait.argtypes = [ctypes.POINTER(CondVarStruct), ctypes.POINTER(MutexStruct), ctypes.c_int]
    _lib.kos_condvar_timed_wait.restype = ctypes.c_int
    
    _lib.kos_condvar_signal.argtypes = [ctypes.POINTER(CondVarStruct)]
    _lib.kos_condvar_signal.restype = ctypes.c_int
    
    _lib.kos_condvar_broadcast.argtypes = [ctypes.POINTER(CondVarStruct)]
    _lib.kos_condvar_broadcast.restype = ctypes.c_int
    
    _lib.kos_condvar_destroy.argtypes = [ctypes.POINTER(CondVarStruct)]
    _lib.kos_condvar_destroy.restype = ctypes.c_int
    
    # Signal functions
    _lib.kos_signal_register.argtypes = [ctypes.c_int, ctypes.c_void_p]
    _lib.kos_signal_register.restype = ctypes.c_int
    
    _lib.kos_signal_unregister.argtypes = [ctypes.c_int]
    _lib.kos_signal_unregister.restype = ctypes.c_int
    
    _lib.kos_signal_send.argtypes = [ctypes.c_int, ctypes.c_int]
    _lib.kos_signal_send.restype = ctypes.c_int
    
    _lib.kos_signal_block.argtypes = [ctypes.c_int]
    _lib.kos_signal_block.restype = ctypes.c_int
    
    _lib.kos_signal_unblock.argtypes = [ctypes.c_int]
    _lib.kos_signal_unblock.restype = ctypes.c_int

# Setup function prototypes
_setup_function_prototypes()

def _check_result(result: int, operation: str = "IPC operation"):
    """Check result and raise appropriate exception"""
    if result == IPCError.SUCCESS:
        return
    elif result == IPCError.TIMEOUT:
        raise IPCTimeoutException(f"{operation} timed out")
    elif result == IPCError.RESOURCE_BUSY:
        raise IPCResourceBusyException(f"{operation} resource busy")
    elif result == IPCError.INVALID_PARAM:
        raise IPCException(f"{operation} invalid parameter")
    elif result == IPCError.NO_MEMORY:
        raise IPCException(f"{operation} out of memory")
    else:
        raise IPCException(f"{operation} failed with error {result}")

class Pipe:
    """KOS Pipe wrapper"""
    
    def __init__(self, name: Optional[str] = None):
        self._pipe = PipeStruct()
        self._name = name
        
        if _lib:
            if name:
                result = _lib.kos_pipe_create_named(ctypes.byref(self._pipe), name.encode('utf-8'))
            else:
                result = _lib.kos_pipe_create(ctypes.byref(self._pipe))
            _check_result(result, "Pipe creation")
        else:
            # Mock implementation
            self._mock_data = []
    
    def read(self, size: int = 1024) -> bytes:
        """Read data from pipe"""
        if _lib:
            buffer = ctypes.create_string_buffer(size)
            result = _lib.kos_pipe_read(ctypes.byref(self._pipe), buffer, size)
            if result < 0:
                _check_result(result, "Pipe read")
            return buffer.raw[:result]
        else:
            # Mock implementation
            if self._mock_data:
                return self._mock_data.pop(0)
            return b""
    
    def write(self, data: bytes) -> int:
        """Write data to pipe"""
        if _lib:
            result = _lib.kos_pipe_write(ctypes.byref(self._pipe), data, len(data))
            if result < 0:
                _check_result(result, "Pipe write")
            return result
        else:
            # Mock implementation
            self._mock_data.append(data)
            return len(data)
    
    def close(self):
        """Close pipe"""
        if _lib:
            result = _lib.kos_pipe_destroy(ctypes.byref(self._pipe))
            _check_result(result, "Pipe close")
    
    def __enter__(self):
        return self
    
    def __exit__(self, exc_type, exc_val, exc_tb):
        self.close()

class SharedMemory:
    """KOS Shared Memory wrapper"""
    
    def __init__(self, name: str, size: int, create: bool = True):
        self._shm = ShmStruct()
        self._name = name
        self._size = size
        
        if _lib:
            if create:
                result = _lib.kos_shm_create(ctypes.byref(self._shm), name.encode('utf-8'), size, 0)
            else:
                result = _lib.kos_shm_attach(ctypes.byref(self._shm), name.encode('utf-8'))
            _check_result(result, "Shared memory creation/attachment")
        else:
            # Mock implementation
            self._mock_data = bytearray(size)
